[package]
name = "qarnot-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "qarnot"
path = "src/lib.rs"

[dependencies]
aws-sdk-s3 = "1.48.0"
aws-smithy-runtime-api = { version = "1.7.2", features = ["client"] }
aws-smithy-types = { version = "1.2.4", features = ["rt-tokio"] }
bytes = "1.7.1"
chrono = { version = "0.4.38", features = ["clock", "serde"] }
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json"] }
rust-ini = "0.21.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
serde_with = { version = "3.8.2", features = ["base64", "std", "macros"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.9.1", features = ["serde", "v4"] }

[dev-dependencies]
env_logger = "0.11.3"
